--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <section id="galeria">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a  href="#"><img src="/Imagenes/img1.jpg"></a>
+                    <a  href="#"><img src="Imagenes/img1.JPG"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img2.jpg">
+                    <img src="/Imagenes/img1.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <img src="/Imagenes/img3.jpg">
