--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
                     <a  href="#"><img src="Imagenes/img1.jpg"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img1.jpg">
+                    <img src="Imagenes/img1.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img3.jpg">
+                    <img src="Imagenes/img3.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img1.jpg">
+                    <img src="Imagenes/img1.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img2.jpg">
+                    <img src="Imagenes/img2.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img3.jpg">
+                    <img src="Imagenes/img3.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img1.jpg">
+                    <img src="Imagenes/img1.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img2.jpg">
+                    <img src="Imagenes/img2.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img3.jpg">
+                    <img src="Imagenes/img3.jpg">
                 </div>
             </div>  
         </section>
