--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 </head>
 <body>
     <header id="menu">
-        <div class="conteinerLogo">
-            <h3>PMGT</h3>
+        <div class="conteinerLogo">    
+            <a href="/index.html"><h3>PMGT</h3></a>
         </div>
         <nav>
             <ul>
-                <li><a href="#">ABOUT</a></li>
+                <li><a href="/about.html">ABOUT</a></li>
                 <li><a href="#">PROJECTS</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="mainHome">
         <section id="galeria">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
