--- a/index.html
+++ b/index.html
@@ -18,46 +18,46 @@
 </head>
 <body>
     <header id="menu">
-        <div class= "conteinerLogo">
-            <h3>PMGT</h3>
+        <div class="conteinerLogo">    
+            <a href="/index.html"><h3>PMGT</h3></a>
         </div>
         <nav>
             <ul>
-                <li><a href="#">ABOUT</a></li>
+                <li><a href="/about.html">ABOUT</a></li>
                 <li><a href="#">PROJECTS</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="mainHome">
         <section id="galeria">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="#"><img src="Imagenes/img1.jpg"></a>
+                    <a  href="#"><img src="Imagenes/img1.jpg"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img2.jpg">
+                    <img src="Imagenes/img1.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img3.jpg">
+                    <img src="Imagenes/img3.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img1.jpg">
+                    <img src="Imagenes/img1.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img2.jpg">
+                    <img src="Imagenes/img2.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img3.jpg">
+                    <img src="Imagenes/img3.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img1.jpg">
+                    <img src="Imagenes/img1.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img2.jpg">
+                    <img src="Imagenes/img2.jpg">
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="/Imagenes/img3.jpg">
+                    <img src="Imagenes/img3.jpg">
                 </div>
             </div>  
         </section>
