--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <nav>
             <ul>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="#">PROJECTS</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="projects.html">PROJECTS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
