--- a/about.html
+++ b/about.html
@@ -30,8 +30,15 @@
         </nav>
     </header>
     <main class="mainAbout">
-        
-        
+        <div class="secA">
+            <img src="Imagenes/arquitecta-min.jpg">
+        </div>
+        <div class="secB">
+            PMGT es un estudio de Arquitectura fundado en 2018 y dirigido por la arquitecta Melisa Permingeat (General Arenales, 1990)
+            Nuestro trabajo esta basado en las condiciones especificas y unicas que tiene cada proyecto, el contexto y las aspiraciones del cliente. 
+            Cada proyecto es una busqueda de espacios calidos, una atmosfera tranquila donde disfrutar de la nobleza de los materiales y la belleza del silencio. Donde la luz es protagonista y las personas encuentran su refugio. 
+            Perseguimos una arquitectura atemporal y simple con la mayor optimizacion de los recursos. 
+        </div>
     </main>
     <footer>
         <div class="footerA">
