--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <body>
     <header id="menu">
         <div class="conteinerLogo">    
-            <a href="/index.html"><h3>PMGT</h3></a>
+            <a href="index.html"><h3>PMGT</h3></a>
         </div>
         <nav>
             <ul>
-                <li><a href="/about.html">ABOUT</a></li>
-                <li><a href="#">PROJECTS</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="projects.html">PROJECTS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
