--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,19 @@
         </nav>
     </header>
     <main class="mainProjects">
+        <section id="galeria">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <a  href="#"><img src="Imagenes/img1.jpg"></a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <img src="Imagenes/img1.jpg">
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <img src="Imagenes/img3.jpg">
+                </div>
+            </div>  
+        </section>
         
         
     </main>
