--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
+        <div class="burgerConteiner">
+            <div id="burger">
+                <div class="line1"></div>
+                <div class="line1"></div>
+                <div class="line1"></div>
+            </div>
+        </div>
+        <div class="splashMenu">
+            <nav>
+                <ul>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main class="mainHome">
         <section id="galeria">
