--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header id="menu">
-        <div class="conteinerLogo">
+        <div class="conteinerLogo">    
             <a href="index.html"><h3>PMGT</h3></a>
         </div>
         <nav>
@@ -28,6 +28,22 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
+        <div class="burgerConteiner">
+            <div id="burger">
+                <div class="line1"></div>
+                <div class="line1"></div>
+                <div class="line1"></div>
+            </div>
+        </div>
+        <div class="splashMenu">
+            <nav>
+                <ul>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main class="mainAbout">
         <div class="secA">
