--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script defer src="app.js"></script>
+    <!--PLANO LEAFLET-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
     <!--FUENTE-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
@@ -46,8 +53,20 @@
         </div>
     </header>
     <main class="mainContact">
-        
-        
+        <div class="mapaConteiner">
+            <div id="mapid"></div>
+        </div>
+        <div class="infoConteiner">
+            <div id="info">
+                <hr>
+                <p>Podes comunicarte con el estudio:</p>
+                <hr>
+                <i class="fas fa-mobile"></i><p></p>
+                <i class="fas fa-envelope"></i><p></p>
+                <i class="fas fa-compass"></i><p></p>
+                <hr>
+            </div> 
+        </div>
     </main>
     <footer>
         <div class="footerA">
