--- a/projects.html
+++ b/projects.html
@@ -46,9 +46,19 @@
         </div>
     </header>
     <main class="mainProjects">
-        <section id="galeria">
+        <div class="proyecto N1">
+            <div class="parteA"></div>
+            <div class="parteB"></div>
+            <div class="parteC"></div>
+        </div>
+        <div class="proyecto N2">
+            <div class="parteA"></div>
+            <div class="parteB"></div>
+            <div class="parteC"></div>
+        </div>
+        <div class="proyecto N3">
             
-        </section>
+        </div>
     </main>
     <footer>
         <div class="footerA">
