--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,10 @@
                 <hr>
                 <p>Podes comunicarte con el estudio:</p>
                 <hr>
-                <i class="fas fa-mobile"></i><p></p>
-                <i class="fas fa-envelope"></i><p></p>
-                <i class="fas fa-compass"></i><p></p>
+                <p><i class="fas fa-mobile"></i>&nbsp;&nbsp;011 6684-9003</p>
+                <p><i class="fas fa-envelope"></i>&nbsp;&nbsp;info@permingeat.com</p>
+                <p><i class="fas fa-compass"></i>&nbsp;&nbsp;Tte. Benjamín Matienzo 3055, C1426 DBE, Buenos Aires</p>
+                <p><a href="https://www.instagram.com/permingeat_arqs/?hl=es-la"><i class="fab fa-instagram fa-1x"></i></a>&nbsp;&nbsp;permingeat_arqs</p>
                 <hr>
             </div> 
         </div>
@@ -81,3 +82,4 @@
     </footer>
 </body>
 </html>
+
