--- a/projects.html
+++ b/projects.html
@@ -47,17 +47,55 @@
     </header>
     <main class="mainProjects">
         <div class="proyecto N1">
-            <div class="parteA"></div>
-            <div class="parteB"></div>
-            <div class="parteC"></div>
+            <div class="imageSector">
+                <img src="Imagenes/Casero/img1.jpg">
+                <img src="Imagenes/Casero/img2.jpg">
+                <img src="Imagenes/Casero/img3.jpg">
+            </div>
+            <div class="imageDescription">
+                <div class="descA">
+                    <p>Obra: Puerto Madero</p><br>
+                    <p>Año: 2020</p>
+                </div>
+                <div class="descB">
+                    <p>Tipo: Remodelacion</p><br>
+                    <p>Area: 50m2</p>
+                </div>
+            </div>
         </div>
         <div class="proyecto N2">
-            <div class="parteA"></div>
-            <div class="parteB"></div>
-            <div class="parteC"></div>
+            <div class="imageSector">
+                <img src="Imagenes/Campo/img1.jpg">
+                <img src="Imagenes/Campo/img2.jpg">
+                <img src="Imagenes/Campo/img3.jpg">
+            </div>
+            <div class="imageDescription">
+                <div class="descA">
+                    <p>Obra: Puerto Madero</p><br>
+                    <p>Año: 2020</p>
+                </div>
+                <div class="descB">
+                    <p>Tipo: Remodelacion</p><br>
+                    <p>Area: 50m2</p>
+                </div>
+            </div>
         </div>
         <div class="proyecto N3">
-            
+            <div class="imageSector">
+                <img src="Imagenes/Madero/img1.jpg">
+                <img src="Imagenes/Madero/img2.jpg">
+                <img src="Imagenes/Madero/img3.jpg">
+            </div>
+            <div class="imageDescription">
+                <div class="descA">
+                    <p>Obra: Puerto Madero</p><br>
+                    <p>Año: 2020</p>
+                </div>
+                <div class="descB">
+                    <p>Tipo: Remodelacion</p><br>
+                    <p>Area: 50m2</p>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
