--- a/index.html
+++ b/index.html
@@ -49,31 +49,31 @@
         <section id="galeria">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a  href="#"><img src="Imagenes/img1.jpg"></a>
+                    <a href="/projects.html"><img src="Imagenes/Madero/img1.jpg"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="Imagenes/img1.jpg">
+                    <a href="/projects.html"><img src="Imagenes/Madero/img2.jpg"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="Imagenes/img3.jpg">
+                    <a href="/projects.html"><img src="Imagenes/Madero/img3.jpg"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="Imagenes/img1.jpg">
+                    <a href="/projects.html"><img src="Imagenes/Campo/img1.jpg"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="Imagenes/img2.jpg">
+                    <a href="/projects.html"><img src="Imagenes/Campo/img2.jpg"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="Imagenes/img3.jpg">
+                    <a href="/projects.html"><img src="Imagenes/Campo/img3.jpg"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="Imagenes/img1.jpg">
+                    <a href="/projects.html"><img src="Imagenes/Casero/img1.jpg"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="Imagenes/img2.jpg">
+                    <a href="/projects.html"><img src="Imagenes/Casero/img2.jpg"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <img src="Imagenes/img3.jpg">
+                    <a href="/projects.html"><img src="Imagenes/Casero/img3.jpg"></a>
                 </div>
             </div>  
         </section>
