--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="PMGT es un estudio de Arquitectura fundado en 2018 y dirigido por la arquitecta Melisa Permingeat, desarrollamos una arquitectura atemporal y simple con la mayor optimizacion de los recursos.">
     <link rel="stylesheet" href="style.css">
     <script defer src="app.js"></script>
     <!--FUENTE-->
@@ -49,31 +50,31 @@
         <section id="galeria">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Madero/img1.jpg"></a>
+                    <a href="projects.html"><img src="Imagenes/Campo/campo1.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Madero/img2.jpg"></a>
+                    <a href="projects.html"><img src="Imagenes/Madero/madero1.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Madero/img3.jpg"></a>
+                    <a href="projects.html"><img src="Imagenes/SanAgustin/sanAgustin3.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Campo/img1.jpg"></a>
+                    <a href="projects.html"><img src="Imagenes/HeyJules/heyJules3.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Campo/img2.jpg"></a>
+                    <a href="projects.html"><img src="Imagenes/Dorrego/dorrego3.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Campo/img3.jpg"></a>
+                    <a href="projects.html"><img src="Imagenes/Curuchet/curuchet1.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Casero/img1.jpg"></a>
+                    <a href="projects.html"><img src="Imagenes/JeanJaures/jeanJaures1.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Casero/img2.jpg"></a>
+                    <a href="projects.html"><img src="Imagenes/Castaños/castaños3.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Casero/img3.jpg"></a>
+                    <a href="projects.html"><img src="Imagenes/Casero/casero3.jpg" alt="imagen interior"></a>
                 </div>
             </div>  
         </section>
