--- a/projects.html
+++ b/projects.html
@@ -48,52 +48,154 @@
     <main class="mainProjects">
         <div class="proyecto N1">
             <div class="imageSector">
-                <img src="Imagenes/Casero/img1.jpg">
-                <img src="Imagenes/Casero/img2.jpg">
-                <img src="Imagenes/Casero/img3.jpg">
+                <img src="Imagenes/Campo/campo1.jpg">
+                <img src="Imagenes/Campo/campo2.jpg">
+                <img src="Imagenes/Campo/campo3.jpg">
             </div>
             <div class="imageDescription">
                 <div class="descA">
-                    <p>Obra: Puerto Madero</p><br>
-                    <p>Año: 2020</p>
+                    <p>Obra: Casa en el Pueblo</p><br>
+                    <p>Año: 2021</p>
                 </div>
                 <div class="descB">
-                    <p>Tipo: Remodelacion</p><br>
-                    <p>Area: 50m2</p>
+                    <p>Tipo: Proyecto</p><br>
+                    <p>Area: 150m2</p>
                 </div>
             </div>
         </div>
         <div class="proyecto N2">
             <div class="imageSector">
-                <img src="Imagenes/Campo/img1.jpg">
-                <img src="Imagenes/Campo/img2.jpg">
-                <img src="Imagenes/Campo/img3.jpg">
+                <img src="Imagenes/Casero/casero1.jpg">
+                <img src="Imagenes/Casero/casero2.jpg">
+                <img src="Imagenes/Casero/casero3.jpg">
             </div>
             <div class="imageDescription">
                 <div class="descA">
-                    <p>Obra: Puerto Madero</p><br>
+                    <p>Obra: Caseros</p><br>
                     <p>Año: 2020</p>
                 </div>
                 <div class="descB">
-                    <p>Tipo: Remodelacion</p><br>
-                    <p>Area: 50m2</p>
+                    <p>Tipo: Remodelación</p><br>
+                    <p>Area: 100m2</p>
                 </div>
             </div>
         </div>
         <div class="proyecto N3">
             <div class="imageSector">
-                <img src="Imagenes/Madero/img1.jpg">
-                <img src="Imagenes/Madero/img2.jpg">
-                <img src="Imagenes/Madero/img3.jpg">
+                <img src="Imagenes/SanAgustin/sanAgustin1.jpg">
+                <img src="Imagenes/SanAgustin/sanAgustin2.jpg">
+                <img src="Imagenes/SanAgustin/sanAgustin3.jpg">
             </div>
             <div class="imageDescription">
                 <div class="descA">
-                    <p>Obra: Puerto Madero</p><br>
-                    <p>Año: 2020</p>
+                    <p>Obra: Casa San Agustin</p><br>
+                    <p>Año: 2019</p>
                 </div>
                 <div class="descB">
-                    <p>Tipo: Remodelacion</p><br>
+                    <p>Tipo: Obra nueva</p><br>
+                    <p>Area: 220m2</p>
+                </div>
+            </div>
+        </div>
+        <div class="proyecto N4">
+            <div class="imageSector">
+                <img src="Imagenes/HeyJules/heyJules1.jpg">
+                <img src="Imagenes/HeyJules/heyJules2.jpg">
+                <img src="Imagenes/HeyJules/heyJules3.jpg">
+            </div>
+            <div class="imageDescription">
+                <div class="descA">
+                    <p>Obra: Hey Jules</p><br>
+                    <p>Año: 2019</p>
+                </div>
+                <div class="descB">
+                    <p>Tipo: Remodelación</p><br>
+                    <p>Area: 220m2</p>
+                </div>
+            </div>
+        </div>
+        <div class="proyecto N5">
+            <div class="imageSector">
+                <img src="Imagenes/Dorrego/dorrego1.jpg">
+                <img src="Imagenes/Dorrego/dorrego2.jpg">
+                <img src="Imagenes/Dorrego/dorrego3.jpg">
+            </div>
+            <div class="imageDescription">
+                <div class="descA">
+                    <p>Obra: Dorrego</p><br>
+                    <p>Año: 2018</p>
+                </div>
+                <div class="descB">
+                    <p>Tipo: Remodelación</p><br>
                     <p>Area: 50m2</p>
+                </div>
+            </div>
+        </div>
+        <div class="proyecto N6">
+            <div class="imageSector">
+                <img src="Imagenes/JeanJaures/jeanJaures1.jpg">
+                <img src="Imagenes/JeanJaures/jeanJaures2.png">
+                <img src="Imagenes/JeanJaures/jeanJaures3.png">
+            </div>
+            <div class="imageDescription">
+                <div class="descA">
+                    <p>Obra: Jean Jaures</p><br>
+                    <p>Año: </p>
+                </div>
+                <div class="descB">
+                    <p>Tipo: </p><br>
+                    <p>Area: </p>
+                </div>
+            </div>
+        </div>
+        <div class="proyecto N7">
+            <div class="imageSector">
+                <img src="Imagenes/Curuchet/curuchet1.jpg">
+                <img src="Imagenes/Curuchet/curuchet2.jpg">
+                <img src="Imagenes/Curuchet/curuchet3.jpg">
+            </div>
+            <div class="imageDescription">
+                <div class="descA">
+                    <p>Obra: Curuchet</p><br>
+                    <p>Año: </p>
+                </div>
+                <div class="descB">
+                    <p>Tipo: </p><br>
+                    <p>Area: </p>
+                </div>
+            </div>
+        </div>
+        <div class="proyecto N8">
+            <div class="imageSector">
+                <img src="Imagenes/Castaños/castaños1.jpg">
+                <img src="Imagenes/Castaños/castaños2.jpg">
+                <img src="Imagenes/Castaños/castaños3.jpg">
+            </div>
+            <div class="imageDescription">
+                <div class="descA">
+                    <p>Obra: Castaños</p><br>
+                    <p>Año: </p>
+                </div>
+                <div class="descB">
+                    <p>Tipo: </p><br>
+                    <p>Area: </p>
+                </div>
+            </div>
+        </div>
+        <div class="proyecto N9">
+            <div class="imageSector">
+                <img src="Imagenes/Madero/madero1.jpg">
+                <img src="Imagenes/Madero/madero2.jpg">
+                <img src="Imagenes/Madero/madero3.jpg">
+            </div>
+            <div class="imageDescription">
+                <div class="descA">
+                    <p>Obra: Madero</p><br>
+                    <p>Año: </p>
+                </div>
+                <div class="descB">
+                    <p>Tipo: </p><br>
+                    <p>Area: </p>
                 </div>
             </div>
         </div>
