--- a/index.html
+++ b/index.html
@@ -50,31 +50,31 @@
         <section id="galeria">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Campo/campo1.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#campo"><img src="Imagenes/Campo/campo1.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Madero/madero1.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#madero"><img src="Imagenes/Madero/madero1.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/SanAgustin/sanAgustin3.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#sanAgustin"><img src="Imagenes/SanAgustin/sanAgustin3.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/HeyJules/heyJules3.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#heyJules"><img src="Imagenes/HeyJules/heyJules3.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Dorrego/dorrego3.jpg" alt="imagen interior"></a>
+                    <a href="projects.html"><img src="Imagenes/Dorrego/dorrego2.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Curuchet/curuchet1.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#curuchet"><img src="Imagenes/Curuchet/curuchet1.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/JeanJaures/jeanJaures1.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#jeanJaures"><img src="Imagenes/JeanJaures/jeanJaures1.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Castaños/castaños3.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#casero"><img src="Imagenes/Casero/casero3.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Casero/casero3.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#castaño"><img src="Imagenes/Castaños/castaños3.jpg" alt="imagen interior"></a>
                 </div>
             </div>  
         </section>
