--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
         </div>
     </header>
     <main class="mainProjects">
-        <div class="proyecto N1">
+        <div class="proyecto N1" id="campo">
             <div class="imageSector">
                 <img src="Imagenes/Campo/campo1.jpg">
                 <img src="Imagenes/Campo/campo2.jpg">
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <div class="proyecto N2">
+        <div class="proyecto N2" id="casero">
             <div class="imageSector">
                 <img src="Imagenes/Casero/casero1.jpg">
                 <img src="Imagenes/Casero/casero2.jpg">
@@ -80,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <div class="proyecto N3">
+        <div class="proyecto N3" id="sanAgustin">
             <div class="imageSector">
                 <img src="Imagenes/SanAgustin/sanAgustin1.jpg">
                 <img src="Imagenes/SanAgustin/sanAgustin2.jpg">
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </div>
-        <div class="proyecto N4">
+        <div class="proyecto N4" id="heyJules">
             <div class="imageSector">
                 <img src="Imagenes/HeyJules/heyJules1.jpg">
                 <img src="Imagenes/HeyJules/heyJules2.jpg">
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <div class="proyecto N5">
+        <div class="proyecto N5" id="dorrego">
             <div class="imageSector">
                 <img src="Imagenes/Dorrego/dorrego1.jpg">
                 <img src="Imagenes/Dorrego/dorrego2.jpg">
@@ -131,7 +131,7 @@
                 </div>
             </div>
         </div>
-        <div class="proyecto N6">
+        <div class="proyecto N6" id="jeanJaures">
             <div class="imageSector">
                 <img src="Imagenes/JeanJaures/jeanJaures1.jpg">
                 <img src="Imagenes/JeanJaures/jeanJaures2.png">
@@ -148,7 +148,7 @@
                 </div>
             </div>
         </div>
-        <div class="proyecto N7">
+        <div class="proyecto N7" id="curuchet">
             <div class="imageSector">
                 <img src="Imagenes/Curuchet/curuchet1.jpg">
                 <img src="Imagenes/Curuchet/curuchet2.jpg">
@@ -165,7 +165,7 @@
                 </div>
             </div>
         </div>
-        <div class="proyecto N8">
+        <div class="proyecto N8" id="castaños">
             <div class="imageSector">
                 <img src="Imagenes/Castaños/castaños1.jpg">
                 <img src="Imagenes/Castaños/castaños2.jpg">
@@ -182,7 +182,7 @@
                 </div>
             </div>
         </div>
-        <div class="proyecto N9">
+        <div class="proyecto N9" id="madero">
             <div class="imageSector">
                 <img src="Imagenes/Madero/madero1.jpg">
                 <img src="Imagenes/Madero/madero2.jpg">
