--- a/projects.html
+++ b/projects.html
@@ -109,8 +109,8 @@
         <div class="proyecto N6" id="jeanJaures">
             <div class="imageSector">
                 <img src="Imagenes/JeanJaures/jeanJaures1.jpg">
-                <img src="Imagenes/JeanJaures/jeanJaures2.png">
-                <img src="Imagenes/JeanJaures/jeanJaures3.png">
+                <img src="Imagenes/JeanJaures/jeanJaures2.jpg">
+                <img src="Imagenes/JeanJaures/jeanJaures3.jpg">
             </div>
             <div class="imageDescription">
                     <p>Obra: Jean Jaures</p>
