--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                 <hr>
                 <p>Podes comunicarte con el estudio:</p>
                 <hr>
-                <p><i class="fas fa-mobile"></i>&nbsp;&nbsp;011 6684-9003</p>
+                <p><i class="fas fa-mobile"></i>&nbsp;&nbsp;<a href="tel:+5401166849003">011 6684-9003</a></p>
                 <p><i class="fas fa-envelope"></i>&nbsp;&nbsp;info@permingeat.com</p>
                 <p><i class="fas fa-compass"></i>&nbsp;&nbsp;Tte. Benjamín Matienzo 3055, C1426 DBE, Buenos Aires</p>
                 <p><a href="https://www.instagram.com/permingeat_arqs/?hl=es-la"><i class="fab fa-instagram fa-1x"></i></a>&nbsp;&nbsp;permingeat_arqs</p>
