--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
     </main>
     <footer>
         <div class="footerA">
-            <p>Web developed by Cristian M.®</p>
+            <a href="https://www.cristianmdev.com/">Web developed by Cristian M.®</a>
             <a href="https://www.instagram.com/permingeat_arqs/?hl=es-la"><i class="fab fa-instagram fa-1x"></i></a>
             <p>Permingeat Arquitectura ®</p>
         </div>
